# ORBSLAM3_PYTHON

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  run_rgbd.py  setup.py
ExamplesPy/: mono_euroc.py  mono_inertial_euroc.py  mono_inertial_tum_vi.py  mono_kitti.py  mono_tum.py  mono_tum_vi.py  rgbd_tum.py  stereo_euroc.py  stereo_inertial_euroc.py  stereo_inertial_tum_vi.py  stereo_kitti.py  stereo_tum_vi.py
demo/: run_rgbd.py
include/: ORBSLAM3Wrapper.h
src/: NDArrayConverter.cpp  ORBSLAM3Wrapper.cpp
